# funes

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  funes-blog-draft.md
.github/workflows/: ci.yml  release.yml
benchmark/: README.md  bench_backends.rs  bench_index.rs  bench_recall.rs
benchmark/longmemeval/: README.md  adapter.py  analyze_m.py  batch_agentic.sh  build_corpus.py  collect_judge_agentic.py  funes_recall_all.py  gpu_naive.py  index_pinned.py  lme_run.py  measure_tokens.py  naive_precompute.py  naive_rag.py  naive_search.py  pi_run.sh  retrieval_recall.py  sampler.py  smoke_test.py
benchmark/longmemeval/naive-rag-ext/: index.ts  package.json
docs/: RATIONALE.md  README.md  add.md  agent-assisted-curation.md  ask.md  automation.md  configuration.md  hub-caching.md  index.md  landscape.md  push.md  recall.md  storage.md
docs/demo/: ask.tape  cross-agents.tape  funes-mcp.json  hub-store.tape  recall.tape
examples/: migrate.rs
integrations/claude-plugin/.claude-plugin/: marketplace.json
integrations/claude-plugin/funes/.claude-plugin/: plugin.json
integrations/pi/: README.md  index.ts  package.json
scripts/: backfill_remote_repo.rs  backfill_repo.rs  bootstrap-protoc.sh  install.sh  migrate_project_facet.rs  migrate_remote_workdir.rs  migrate_workdir_facet.rs  test-install.sh
scripts/automation/: funes-index.sh  funes-push.sh
skills/funes/: SKILL.md
src/: ask.rs  banner.rs  blas.rs  capture.rs  capture_store.rs  card.rs  chunk.rs  claude.rs  claude_traces.rs  codex.rs  codex_traces.rs  config.rs  curate.rs  curation_assist.rs  dataset.rs  db.rs  fetch_store.rs  harness.rs  hello.rs  hermes.rs  hermes_traces.rs  hf_dataset.rs  hf_traces.rs  hooks.rs  hub.rs  index.rs  inference.rs  integration.rs  jsonl.rs  lib.rs  lock.rs  main.rs  mcp.rs  opencode.rs  parse.rs  pi.rs  pi_traces.rs  preprocess.rs  push.rs  recall.rs  (+10 more)
src/banner/: drift.rs  emoji.rs  sine.rs
src/tui/: browser.rs  curate.rs
tests/: add_claude_plugin.rs  add_codex_hooks.rs  ask_grounding.rs  ask_no_agent.rs  curate_gating.rs  first_index.rs  hello_world.rs  index_recall.rs  no_index.rs  parse_real_sessions.rs  push_card.rs  push_round_trip.rs  recall_no_harness_column.rs  redact_on_index.rs  reindex_incremental.rs  remote_cache.rs  remote_recall.rs  remote_repo_source.rs  remove.rs  scrub.rs  scrub_drops_all.rs  scrub_drops_escaped_key.rs  store_lock.rs  sync_round_trip.rs
tests/fixtures/: claude_session.jsonl  codex_session.jsonl  pi_session.jsonl
tests/support/: mod.rs
