[package]
name = "funes"
version = "0.10.0+dev"
edition = "2021"
description = "Recall over your past AI agent sessions — the man who forgets nothing, with discrimination."

[dependencies]
fastembed = "5"                  # local CPU embeddings + rerank (ONNX/ort)
arrow-array = "58"               # RecordBatch types (must match lance's arrow version)
arrow-schema = "58"              # Schema/Field/DataType for building batches
arrow-select = "58"              # filter_record_batch: drop secret-bearing rows before a push
# huggingface = hf:// reads/writes (Xet-cached). gcp is a workaround: lance-io 7.0's `huggingface`
# feature alone fails to compile (it uses DEFAULT_CLOUD_BLOCK_SIZE, gated behind a cloud feature).
lance = "=7.0.0"                 # Dataset open/scan/append + create_index, local and over hf://
lance-io = { version = "=7.0.0", features = ["huggingface", "gcp"] }  # hf:// object store + WrappingObjectStore
lance-index = "=7.0.0"           # FTS/IVF index params + FullTextSearchQuery
lance-linalg = "=7.0.0"          # MetricType for the IVF_PQ index
parquet = "58"                   # read agent-trace datasets stored as parquet (arrow-rs, matches arrow-* = "58")
object_store = "=0.13.2"         # the ObjectStore trait the capture wrapper implements (matches lance-io)
async-trait = "0.1"              # for the ObjectStore impl in src/capture_store.rs
bytes = "1"                      # captured write payloads
chrono = "0.4"                   # recency weighting
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "sync"] }  # sync: OnceCell/Mutex cache the recall models
futures = "0.3"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }               # MCP request structs
serde_json = { version = "1", features = ["preserve_order"] }  # parse JSONL; preserve tool_use key order
sha1 = "0.10"                    # chunk id = sha1(...)[:16]
hex = "0.4"
walkdir = "2"                    # recursive *.jsonl walk
rmcp = { version = "1", features = ["server", "macros", "transport-io", "schemars"] }  # MCP stdio server
tempfile = "3"                   # temp dir for the pre-publish secret scan; temp files/dirs in tests
hf-hub = { version = "1.0.0-rc.1", features = ["rustls-tls"] }  # native create_commit + parent_commit CAS + Xet upload
# Optional handle on the transitively-pulled openssl-sys (native-tls, via fastembed + lance).
# The `vendored-openssl` feature builds OpenSSL from source so the aarch64-linux cross-build
# needs no target sysroot. Off by default — native and macOS builds keep their system TLS.
openssl-sys = { version = "0.9", optional = true }

[features]
vendored-openssl = ["openssl-sys/vendored"]

# Benchmarks live under benchmark/ alongside their README; run via `cargo run --example <name>`.
[[example]]
name = "bench_recall"
path = "benchmark/bench_recall.rs"

[[example]]
name = "bench_index"
path = "benchmark/bench_index.rs"

[profile.release]
opt-level = 3

# CI build profile. Keeps line numbers for our own code so test backtraces stay useful, but strips debuginfo
# from dependencies so linking doesn't exhaust the runner's disk.
# Workspace keeps debug-assertions (inherited from dev); only deps drop them.
[profile.ci]
inherits = "dev"
debug = "line-tables-only"
incremental = false

[profile.ci.package."*"]
debug = false
debug-assertions = false
strip = "debuginfo"
