[package]
name = "funes"
version = "0.13.0+dev"
edition = "2021"
description = "Recall over your past AI agent sessions — the man who forgets nothing, with discrimination."
license = "Apache-2.0"
repository = "https://github.com/huggingface/funes"

[dependencies]
# The `onnx` backend (feature below): embeddings + rerank on the ONNX Runtime. Off by default —
# ort ships prebuilt against glibc 2.38, above the glibc 2.35 floor releases target (Ubuntu 22.04).
fastembed = { version = "5", optional = true }
arrow-array = "58"               # RecordBatch types (must match lance's arrow version)
arrow-schema = "58"              # Schema/Field/DataType for building batches
arrow-select = "58"              # filter_record_batch: drop secret-bearing rows before a push
# huggingface = hf:// reads/writes (Xet-cached). gcp is a workaround: lance-io 7.0's `huggingface`
# feature alone fails to compile (it uses DEFAULT_CLOUD_BLOCK_SIZE, gated behind a cloud feature).
lance = "=7.0.0"                 # Dataset open/scan/append + create_index, local and over hf://
lance-io = { version = "=7.0.0", features = ["huggingface", "gcp"] }  # hf:// object store + WrappingObjectStore
lance-index = "=7.0.0"           # FTS/IVF index params + FullTextSearchQuery
lance-linalg = "=7.0.0"          # MetricType for the IVF_PQ index
parquet = "58"                   # read agent-trace datasets stored as parquet (arrow-rs, matches arrow-* = "58")
object_store = "=0.13.2"         # the ObjectStore trait the capture wrapper implements (matches lance-io)
async-trait = "0.1"              # for the ObjectStore impl in src/capture_store.rs
bytes = "1"                      # captured write payloads
chrono = "0.4"                   # recency weighting
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "sync"] }  # sync: OnceCell/Mutex cache the recall models
futures = "0.3"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }               # MCP request structs
serde_json = { version = "1", features = ["preserve_order"] }  # parse JSONL; preserve tool_use key order
sha1 = "0.10"                    # chunk id = sha1(...)[:16]
hex = "0.4"
walkdir = "2"                    # recursive *.jsonl walk
rmcp = { version = "1", features = ["server", "macros", "transport-io", "schemars"] }  # MCP stdio server
tempfile = "3"                   # temp dir for the pre-publish secret scan; temp files/dirs in tests
hf-hub = { version = "1.0.0-rc.1", features = ["rustls-tls", "blocking"] }  # native create_commit + parent_commit CAS + Xet upload; blocking: model download in the blas backend
# Optional handle on the transitively-pulled openssl-sys (native-tls, via lance).
# The `vendored-openssl` feature builds OpenSSL from source so the aarch64-linux cross-build
# needs no target sysroot. Off by default — native and macOS builds keep their system TLS.
openssl-sys = { version = "0.9", optional = true }
# The `blas` backend (feature below): a from-scratch forward that loads safetensors weights
# and tokenizes itself. macOS runs it on Accelerate, Linux on faer.
tokenizers = { version = "0.22", optional = true }
safetensors = { version = "0.8", optional = true }

# The `blas` backend's Linux seam. Both are pure Rust with runtime CPU dispatch, so release
# binaries stay baseline x86-64/aarch64 yet use AVX2/AVX-512/NEON where the host has them.
[target.'cfg(target_os = "linux")'.dependencies]
faer = { version = "0.24", optional = true, default-features = false, features = ["std", "rayon"] }  # GEMM ("std" pulls its fast x86 kernels)
multiversion = { version = "0.8", optional = true }  # per-CPU clones of the vectorized exp

[features]
default = ["blas"]
vendored-openssl = ["openssl-sys/vendored"]
# BLAS inference backend (src/blas.rs), the default: macOS wires it to Accelerate (see build.rs),
# Linux to faer + a polynomial exp.
blas = ["dep:tokenizers", "dep:safetensors", "dep:faer", "dep:multiversion"]
# ONNX inference backend (fastembed/ort). When both backends are compiled in, `blas` is the one
# funes runs; the ONNX types are the reference backend for bench_backends.
onnx = ["dep:fastembed"]

# Benchmarks live under benchmark/ alongside their README; run via `cargo run --example <name>`.
[[example]]
name = "bench_recall"
path = "benchmark/bench_recall.rs"

[[example]]
name = "bench_index"
path = "benchmark/bench_index.rs"

# A/B the inference backends (BLAS vs ONNX as reference). Needs both compiled in:
#   cargo run --release --features onnx --example bench_backends
[[example]]
name = "bench_backends"
path = "benchmark/bench_backends.rs"

# One-off store migration for the cwd-derived project facet; delete with the file once every
# store is migrated.
[[example]]
name = "migrate_project_facet"
path = "scripts/migrate_project_facet.rs"

[profile.release]
opt-level = 3

# Distribution profile — what the release workflow publishes. thin LTO gives cross-crate
# dead-code elimination (funes links the full lance/DataFusion and arrow stacks but
# exercises a narrow slice of each) and strip drops the symbol table, while fitting a 16 GiB CI
# runner — fat LTO with one codegen unit merges the whole graph into a single module and gets the
# build killed there mid-link. The LTO pass is uncacheable, so it runs only for published builds —
# everyday `cargo build --release` keeps the fast profile above.
[profile.dist]
inherits = "release"
lto = "thin"
strip = "symbols"

# CI build profile. Keeps line numbers for our own code so test backtraces stay useful, but strips debuginfo
# from dependencies so linking doesn't exhaust the runner's disk.
# Workspace keeps debug-assertions (inherited from dev); only deps drop them.
[profile.ci]
inherits = "dev"
debug = "line-tables-only"
incremental = false

[profile.ci.package."*"]
debug = false
debug-assertions = false
strip = "debuginfo"
